--- a/HTML + CSS 3-5/ex022/fundo006.html
+++ b/HTML + CSS 3-5/ex022/fundo006.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
-            background-image: url('imagens/wallpaper002.jpg');
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-size: cover;
+            
+            /* shorthand background
 
+            color image position repeat size attachment
+            */
+            
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
 
         main { background-color: white;
-        width: 400px;
+        max-width: 400px;
         padding: 10px;
         margin:auto;
         border: 1px solid darkblue;
@@ -29,7 +31,7 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur soluta ducimus corporis. Eligendi nulla officiis ipsa expedita exercitationem animi, repellendus porro numquam dolorem, quidem sed praesentium consequuntur laudantium facilis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, molestiae ducimus accusantium ipsum alias eos id saepe sapiente culpa iste mollitia molestias. Repellat porro ipsam, consequatur modi a repudiandae quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ipsa obcaecati recusandae ducimus eligendi nihil esse. Quas possimus adipisci, laboriosam distinctio nostrum sequi perferendis, nesciunt quis laudantium, expedita in? Laboriosam!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur soluta ducimus corporis. Eligendi nulla officiis ipsa expedita exercitationem animi, repellendus porro numquam dolorem, quidem sed praesentium consequuntur laudantium facilis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, molestiae ducimus accusantium ipsum alias eos id saepe sapiente culpa iste mollitia molestias. Repellat porro ipsam, consequatur modi a repudiandae quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ipsa obcaecati recusandae ducimus eligendi nihil esse. Quas possimus adipisci, laboriosam distinctio nostrum sequi perferendis, nesciunt quis laudantium, expedita in? Laboriosam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur soluta ducimus corporis. Eligendi nulla officiis ipsa expedita exercitationem animi, repellendus porro numquam dolorem, quidem sed praesentium consequuntur laudantium facilis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, molestiae ducimus accusantium ipsum alias eos id saepe sapiente culpa iste mollitia molestias. Repellat porro ipsam, consequatur modi a repudiandae quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ipsa obcaecati recusandae ducimus eligendi nihil esse. Quas possimus adipisci, laboriosam distinctio nostrum sequi perferendis, nesciunt quis laudantium, expedita in? Laboriosam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur soluta ducimus corporis. Eligendi nulla officiis ipsa expedita exercitationem animi, repellendus porro numquam dolorem, quidem sed praesentium consequuntur laudantium facilis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, molestiae ducimus accusantium ipsum alias eos id saepe sapiente culpa iste mollitia molestias. Repellat porro ipsam, consequatur modi a repudiandae quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ipsa obcaecati recusandae ducimus eligendi nihil esse. Quas possimus adipisci, laboriosam distinctio nostrum sequi perferendis, nesciunt quis laudantium, expedita in? Laboriosam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur soluta ducimus corporis. Eligendi nulla officiis ipsa expedita exercitationem animi, repellendus porro numquam dolorem, quidem sed praesentium consequuntur laudantium facilis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, molestiae ducimus accusantium ipsum alias eos id saepe sapiente culpa iste mollitia molestias. Repellat porro ipsam, consequatur modi a repudiandae quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ipsa obcaecati recusandae ducimus eligendi nihil esse. Quas possimus adipisci, laboriosam distinctio nostrum sequi perferendis, nesciunt quis laudantium, expedita in? Laboriosam!</p>
 
             </main>
     </main>
