--- a/HTML + CSS 4-5/ex026/mq005/index.html
+++ b/HTML + CSS 4-5/ex026/mq005/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+        <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -28,5 +30,14 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore laudantium aperiam, esse voluptate accusamus quis voluptates eos iste obcaecati saepe optio, tenetur, magnam dolores debitis minus ex omnis. Esse, distinctio. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et numquam perspiciatis, facere ex nemo recusandae atque minus voluptate quas quia eveniet deserunt obcaecati quisquam rerum. Laboriosam mollitia ipsum obcaecati vero. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur a fugit rerum illo porro ea quas? Voluptatibus dolorum id nobis itaque nihil sed saepe officiis necessitatibus, pariatur ipsum veritatis minus.</p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+                if (itens.style.display == 'block') {
+                    itens.style.display = 'none'
+                } else {
+                    itens.style.display = 'block'
+                }
+        }
+    </script>
 </body>
 </html>
